--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,5 +22,5 @@ jobs:
     steps:
       - name: checkout repo content
         run: |
-            echo "YAHOO_FINANCE_TWITTER_BOT_CONSUMER_KEY: ${secrets.YAHOO_FINANCE_TWITTER_BOT_CONSUMER_KEY}"
+            echo "YAHOO_FINANCE_TWITTER_BOT_CONSUMER_KEY: ${{secrets.YAHOO_FINANCE_TWITTER_BOT_CONSUMER_KEY}}"
 
