--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,21 @@ jobs:
 
     steps:
       - name: checkout repo content
+        uses: actions/checkout@v2 # checkout the repository content to github runner.
+      - name: setup python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8 #install the python needed
+        env:
+          YAHOO_FINANCE_TWITTER_BOT_CONSUMER_KEY: ${{secrets.YAHOO_FINANCE_TWITTER_BOT_CONSUMER_KEY}}
+          YAHOO_FINANCE_TWITTER_BOT_CONSUMER_SECRET: ${{secrets.YAHOO_FINANCE_TWITTER_BOT_CONSUMER_SECRET}}
+          YAHOO_FINANCE_TWITTER_BOT_ACCESS_TOKEN: ${{secrets.YAHOO_FINANCE_TWITTER_BOT_ACCESS_TOKEN}}
+          YAHOO_FINANCE_TWITTER_BOT_ACCESS_TOKEN_SECRET: ${{secrets.YAHOO_FINANCE_TWITTER_BOT_ACCESS_TOKEN_SECRET}}
+      - name: Install dependencies
         run: |
-            echo "YAHOO_FINANCE_TWITTER_BOT_CONSUMER_KEY: ${{secrets.YAHOO_FINANCE_TWITTER_BOT_CONSUMER_KEY}}"
+          python -m pip install --upgrade pip
+          pip install bs4 tweepy requests
+      - name: execute py script # run file
+        run: |
+          python yahoo_finance_twitter_bot/main.py
 
