--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install bs4 tweepy requests python-dotenv lxml
-      - name: execute py script # run file
+      - name: execute py script 
         run: |
           python yahoo_finance_twitter_bot/main.py
 
