--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install bs4 tweepy requests python-dotenv lxml
+          pip install bs4 tweepy requests python-dotenv lxml html5lib
       - name: execute py script 
         run: |
           python yahoo_finance_twitter_bot/main.py
