--- a/quotes_twiter_bot/.env.example
+++ b/quotes_twiter_bot/.env.example
@@ -2,5 +2,5 @@ QUOTES_TWITER_BOT_CONSUMER_KEY = ******
 QUOTES_TWITER_BOT_CONSUMER_SECRET = ******
 QUOTES_TWITER_BOT_ACCESS_TOKEN = ******
 QUOTES_TWITER_BOT_ACCESS_TOKEN_SECRET = ******
-GDRIVE_API_CREDENTIALS = ******
-SHEET_KEY = ******
+QUOTES_TWITER_BOT_GDRIVE_API_CREDENTIALS = ******
+QUOTES_TWITER_BOT_SHEET_KEY = ******
