--- a/.github/workflows/quotes_twitter_bot.yml
+++ b/.github/workflows/quotes_twitter_bot.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install tweepy python-dotenv
+          pip install tweepy python-dotenv pygsheets
       - name: execute py script 
         run: |
           python quotes_twiter_bot/post_tweet.py
@@ -29,3 +29,5 @@ jobs:
           QUOTES_TWITER_BOT_CONSUMER_SECRET: ${{secrets.QUOTES_TWITER_BOT_CONSUMER_SECRET}}
           QUOTES_TWITER_BOT_ACCESS_TOKEN: ${{secrets.QUOTES_TWITER_BOT_ACCESS_TOKEN}}
           QUOTES_TWITER_BOT_ACCESS_TOKEN_SECRET: ${{secrets.QUOTES_TWITER_BOT_ACCESS_TOKEN_SECRET}}
+          QUOTES_TWITER_BOT_GDRIVE_API_CREDENTIALS: ${{secrets.QUOTES_TWITER_BOT_GDRIVE_API_CREDENTIALS}}
+          QUOTES_TWITER_BOT_SHEET_KEY: ${{secrets.QUOTES_TWITER_BOT_SHEET_KEY}}
