--- a/.github/workflows/quotes_tumblr_bot.yml
+++ b/.github/workflows/quotes_tumblr_bot.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytumblr python-dotenv
+          pip install pytumblr python-dotenv Pillow
       - name: execute py script 
         run: |
           python quotes_tumblr_bot/upload_quote.py
