tyler bot workflow

--- a/.github/workflows/tyler_twitter_bot.yml
+++ b/.github/workflows/tyler_twitter_bot.yml
@@ -1,6 +1,5 @@
-name: quotes twitter bot
+name: tyler twitter bot
 
-# Controls when the workflow will run
 on:
   schedule:
     - cron: "*/7 * * * *" 
