--- a/.github/workflows/quotes_linkedin_bot.yml
+++ b/.github/workflows/quotes_linkedin_bot.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install python-dotenv
+          pip install python-dotenv requests
       - name: execute py script 
         run: |
           python quotes_linkedin_bot/create_post.py
