--- a/.github/workflows/quotes_meta_bot.yml
+++ b/.github/workflows/quotes_meta_bot.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install python-dotenv imgbbpy Pillow facebook-sdk
+          pip install python-dotenv imgbbpy Pillow facebook-sdk requests
       - name: execute py script 
         run: |
           python quotes_meta_bot/post.py
