--- a/.github/workflows/admitad_tumblr_bot.yml
+++ b/.github/workflows/admitad_tumblr_bot.yml
@@ -21,10 +21,10 @@ jobs:
         run: |
           python admitad_tumblr_bot/upload_to_tumblr.py
         env:
-          QUOTES_TUMBLR_BOT_CONSUMER_KEY: ${{secrets.QUOTES_TUMBLR_BOT_CONSUMER_KEY}}
-          QUOTES_TUMBLR_BOT_CONSUMER_SECRET: ${{secrets.QUOTES_TUMBLR_BOT_CONSUMER_SECRET}}
-          QUOTES_TUMBLR_BOT_OAUTH_TOKEN: ${{secrets.QUOTES_TUMBLR_BOT_OAUTH_TOKEN}}
-          QUOTES_TUMBLR_BOT_OAUTH_SECRET: ${{secrets.QUOTES_TUMBLR_BOT_OAUTH_SECRET}}
+          ADMITAD_BOT_CONSUMER_KEY: ${{secrets.ADMITAD_BOT_CONSUMER_KEY}}
+          ADMITAD_BOT_CONSUMER_SECRET: ${{secrets.ADMITAD_BOT_CONSUMER_SECRET}}
+          ADMITAD_BOT_OAUTH_TOKEN: ${{secrets.ADMITAD_BOT_OAUTH_TOKEN}}
+          ADMITAD_BOT_OAUTH_SECRET: ${{secrets.ADMITAD_BOT_OAUTH_SECRET}}
           ADMITAD_BOT_CLIENT_ID: ${{secrets.ADMITAD_BOT_CLIENT_ID}}
           ADMITAD_BOT_CLIENT_SECRET: ${{secrets.ADMITAD_BOT_CLIENT_SECRET}}
           ADMITAD_BOT_SCOPE: ${{secrets.ADMITAD_BOT_SCOPE}}
