--- a/.github/workflows/tyler_twitter_bot.yml
+++ b/.github/workflows/tyler_twitter_bot.yml
@@ -2,7 +2,7 @@ name: tyler twitter bot
 
 on:
   schedule:
-    - cron: "*/10 * * * *" 
+    - cron: "0 * * * *" 
 jobs:
   build:
     runs-on: ubuntu-latest
