--- a/.github/workflows/abdou_twitter_bot.yml
+++ b/.github/workflows/abdou_twitter_bot.yml
@@ -21,9 +21,9 @@ jobs:
         run: |
           python abdou_twitter_bot/follow_unfollow_like.py
         env:
-          TYLER_BOT_CONSUMER_KEY: ${{secrets.TYLER_BOT_CONSUMER_KEY}}
-          TYLER_BOT_CONSUMER_SECRET: ${{secrets.TYLER_BOT_CONSUMER_SECRET}}
-          TYLER_BOT_ACCESS_TOKEN: ${{secrets.TYLER_BOT_ACCESS_TOKEN}}
-          TYLER_BOT_ACCESS_TOKEN_SECRET: ${{secrets.TYLER_BOT_ACCESS_TOKEN_SECRET}}
-          TYLER_BOT_GDRIVE_API_CREDENTIALS: ${{secrets.TYLER_BOT_GDRIVE_API_CREDENTIALS}}
-          TYLER_BOT_SHEET_KEY: ${{secrets.TYLER_BOT_SHEET_KEY}}
+          ABDOU_BOT_CONSUMER_KEY: ${{secrets.ABDOU_BOT_CONSUMER_KEY}}
+          ABDOU_BOT_CONSUMER_SECRET: ${{secrets.ABDOU_BOT_CONSUMER_SECRET}}
+          ABDOU_BOT_ACCESS_TOKEN: ${{secrets.ABDOU_BOT_ACCESS_TOKEN}}
+          ABDOU_BOT_ACCESS_TOKEN_SECRET: ${{secrets.ABDOU_BOT_ACCESS_TOKEN_SECRET}}
+          ABDOU_BOT_GDRIVE_API_CREDENTIALS: ${{secrets.ABDOU_BOT_GDRIVE_API_CREDENTIALS}}
+          ABDOU_BOT_SHEET_KEY: ${{secrets.ABDOU_BOT_SHEET_KEY}}
