--- a/.github/workflows/memes_shop_reddit_bot.yml
+++ b/.github/workflows/memes_shop_reddit_bot.yml
@@ -2,7 +2,7 @@ name: memes shop reddit bot
 
 on:
   schedule:
-    - cron: "*/20 * * * *" 
+    - cron: "50 * * * *" 
 jobs:
   build:
     runs-on: ubuntu-latest
