--- a/.github/workflows/quotes_reddit_bot.yml
+++ b/.github/workflows/quotes_reddit_bot.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install praw python-dotenv Pillow
+          pip install praw python-dotenv Pillow pygsheets
       - name: execute py script 
         run: |
           python quotes_reddit_bot/upload_to_reddit.py
