--- a/.github/workflows/quotes_pinterest_bot.yml
+++ b/.github/workflows/quotes_pinterest_bot.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install python-dotenv imgbbpy Pillow python-pinterest social-post-api 
+          pip install python-dotenv imgbbpy Pillow social-post-api 
       - name: execute py script 
         run: |
           python quotes_pinterest_bot/pinterest_pins.py
