--- a/.github/workflows/quotes_twitter_bot.yml
+++ b/.github/workflows/quotes_twitter_bot.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install tweepy python-dotenv pygsheets
+          pip install tweepy python-dotenv pygsheets Pillow
       - name: execute py script 
         run: |
           python quotes_twiter_bot/post_tweet.py
