--- a/.github/workflows/quotes_reddit_bot.yml
+++ b/.github/workflows/quotes_reddit_bot.yml
@@ -1,8 +1,8 @@
 name: quotes reddit bot
 
 on:
-  schedule:
-    - cron: "*/10 * * * *" 
+#  schedule:
+#   - cron: "*/10 * * * *" 
 jobs:
   build:
     runs-on: ubuntu-latest
