--- a/.github/workflows/quotes_twitter_bot.yml
+++ b/.github/workflows/quotes_twitter_bot.yml
@@ -4,8 +4,8 @@ name: quotes twitter bot
 
 # Controls when the workflow will run
 on:
-#  schedule:
-#    - cron: "*/7 * * * *" 
+  schedule:
+    - cron: "*/7 * * * *" 
 jobs:
   build:
     runs-on: ubuntu-latest
