--- a/.github/workflows/quotes_meta_bot.yml
+++ b/.github/workflows/quotes_meta_bot.yml
@@ -2,7 +2,7 @@ name: quotes meta bot
 
 on:
   schedule:
-    - cron: "0 * * * *" 
+    - cron: "0 */3 * * *" 
 jobs:
   build:
     runs-on: ubuntu-latest
