--- a/.github/workflows/quotes_tumblr_bot.yml
+++ b/.github/workflows/quotes_tumblr_bot.yml
@@ -1,8 +1,8 @@
 name: quotes tumblr bot
 
-on:
-  schedule:
-    - cron: "*/7 * * * *" 
+#on:
+#  schedule:
+#    - cron: "*/7 * * * *" 
 jobs:
   build:
     runs-on: ubuntu-latest
