--- a/.github/workflows/quotes_twitter_bot.yml
+++ b/.github/workflows/quotes_twitter_bot.yml
@@ -3,9 +3,9 @@
 name: quotes twitter bot
 
 # Controls when the workflow will run
-on:
-  schedule:
-   - cron: "*/20 * * * *" 
+#on:
+#  schedule:
+#   - cron: "*/20 * * * *" 
 jobs:
   build:
     runs-on: ubuntu-latest
