--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ name: yahoo finance twitter bot
 # Controls when the workflow will run
 on:
   schedule:
-    - cron: "*/20 * * * *" 
+    - cron: "0 * * * *" 
 jobs:
   build:
     runs-on: ubuntu-latest
